--- a/MetanalysisNeonics/MetanalysisNeonics.tex
+++ b/MetanalysisNeonics/MetanalysisNeonics.tex
@@ -204,300 +204,121 @@ moderators:}\label{estimations-using-moderators}
 
 \section{Abundance}\label{abundance}
 
-\subsubsection{Abundance and functional
-group}\label{abundance-and-functional-group}
-
-Using functional group as a moderator yields the following results
-
-\begin{longtable}[c]{@{}rrrlrr@{}}
-\caption{effect size of the Standardized mean difference of abundance
-for each functional group and it's standard error}\tabularnewline
-\toprule
-estimate & ci.ub & ci.lb & group & p & n\tabularnewline
-\midrule
-\endfirsthead
-\toprule
-estimate & ci.ub & ci.lb & group & p & n\tabularnewline
-\midrule
-\endhead
--0.917 & -0.423 & -1.410 & Null & 0.000 & 101\tabularnewline
--0.456 & 0.538 & -1.450 & detritivore & 0.368 & 24\tabularnewline
--0.905 & -0.052 & -1.758 & mixed & 0.038 & 33\tabularnewline
--4.069 & -1.608 & -6.531 & omnivore & 0.001 & 4\tabularnewline
--1.654 & 0.626 & -3.934 & pollinator & 0.155 & 4\tabularnewline
--0.787 & 0.011 & -1.585 & predator & 0.053 & 36\tabularnewline
-\bottomrule
-\end{longtable}
-
-the the psuedo R squared for this model was 0.06, that is despite the
-mixed and omnivore funtional groups being statistically significant,
-functional group on its own does not explain the variability of the
-results very well.
-
 \begin{figure}[htbp]
 \centering
-\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-6-1.pdf}
-\caption{effect size of the Standardized mean difference of abundance
-for each functional group and it's standard error}
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-10-1.pdf}
+\caption{effect size of the Standardized mean difference of Abundance
+and concentration {[}g/Kg{]}}
 \end{figure}
-
-\subsubsection{Abundance and nesting
-area}\label{abundance-and-nesting-area}
-
-\begin{longtable}[c]{@{}rrrlrr@{}}
-\caption{effect size of the Standardized mean difference of abundance
-controling for nesting area and it's standard error}\tabularnewline
-\toprule
-estimate & ci.ub & ci.lb & group & p & n\tabularnewline
-\midrule
-\endfirsthead
-\toprule
-estimate & ci.ub & ci.lb & group & p & n\tabularnewline
-\midrule
-\endhead
--0.917 & -0.423 & -1.410 & Null & 0.000 & 101\tabularnewline
--0.840 & -0.101 & -1.579 & aboveground & 0.026 & 0\tabularnewline
--1.070 & -0.386 & -1.755 & both & 0.002 & 0\tabularnewline
-0.523 & 3.305 & -2.259 & ground & 0.713 & 0\tabularnewline
-\bottomrule
-\end{longtable}
-
-the the psuedo R squared for using nesting area as the only moderator
-was 0, this model does not explain much.
-
-\subsubsection{Abundance and concentration
-(ppb)}\label{abundance-and-concentration-ppb}
-
-When we use concentration as parts per billion, the number of effect
-sizes diminishes from 101 to only nine.
-
-Despite that, the r squared of this model is 0.45, that is over 40
-percent of cariability explained by this factor alone. The relationship
-between concentration and Abundance can be seen in figure 4.
-
-\begin{figure}[htbp]
-\centering
-\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-9-1.pdf}
-\caption{effect size of the Standardized mean difference of abundance
-and concentration (ppb)}
-\end{figure}
-
-\subsubsection{Abundance and concentration (Kg/Ha) for Powder/granular
-treatment}\label{abundance-and-concentration-kgha-for-powdergranular-treatment}
-
-When we use concentration as parts per billion, the number of effect
-sizes diminishes from 101 to only nine.
-
-Despite that, the r squared of this model is 0.04, that is over 40
-percent of cariability explained by this factor alone. The relationship
-between concentration and Abundance can be seen in figure 4.
-
-\begin{figure}[htbp]
-\centering
-\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-11-1.pdf}
-\caption{effect size of the Standardized mean difference of abundance
-and concentration (ppb)}
-\end{figure}
-
-\subsubsection{Abundance and concentration (g/Kg) for seed
-treatment}\label{abundance-and-concentration-gkg-for-seed-treatment}
-
-When we use concentration as parts per billion, the number of effect
-sizes diminishes from 101 to only nine.
-
-Despite that, the r squared of this model is 0.27, that is over 40
-percent of cariability explained by this factor alone. The relationship
-between concentration and Abundance can be seen in figure 4.
-
-\begin{figure}[htbp]
-\centering
-\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-13-1.pdf}
-\caption{effect size of the Standardized mean difference of abundance
-and concentration (ppb)}
-\end{figure}
-
-\subsubsection{Abundance concentration and functional
-group}\label{abundance-concentration-and-functional-group}
-
-Again, when we have concentration, the number of studies is reduced form
-101 to nine.
-
-Adding functional group to the model increases R squared to 0.85
-
-\begin{figure}[htbp]
-\centering
-\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-15-1.pdf}
-\caption{effect size of the concentration and functional group on the
-Standardized mean difference of abundance}
-\end{figure}
-
-\subsubsection{Abundance concentration and nesting
-area}\label{abundance-concentration-and-nesting-area}
-
-\subsubsection{Full model}\label{full-model}
 
 \subsubsection{Comparison of models}\label{comparison-of-models}
 
-\begin{longtable}[c]{@{}lrrrr@{}}
+\begin{longtable}[c]{@{}lrrrrr@{}}
 \caption{Comparison of models taking into account p value, Pseudo R
 squared and AICc}\tabularnewline
 \toprule
-model & p\_value & R\_squared & AICc & deltaAICc\tabularnewline
+model & p\_value & R\_squared & AICc & deltaAICc & Weight\tabularnewline
 \midrule
 \endfirsthead
 \toprule
-model & p\_value & R\_squared & AICc & deltaAICc\tabularnewline
+model & p\_value & R\_squared & AICc & deltaAICc & Weight\tabularnewline
 \midrule
 \endhead
-y \textasciitilde{} Concentration & 0.008 & 0.45 & 60.476 &
+y \textasciitilde{} Concentration {[}g/kg{]} + Nesting Area + Functional
+Group & 0.013 & 0.37 & 132.095 & 0.000 & 0.363\tabularnewline
+y \textasciitilde{} Concentration {[}g/kg{]} + Functional group & 0.017
+& 0.32 & 132.421 & 0.326 & 0.309\tabularnewline
+y \textasciitilde{} Concentration {[}g/kg{]} & 0.019 & 0.27 & 132.915 &
+0.820 & 0.241\tabularnewline
+y \textasciitilde{} Concentration {[}g/kg{]} + Nesting Area & 0.052 &
+0.26 & 134.968 & 2.872 & 0.086\tabularnewline
+y \textasciitilde{} Concentration {[}Kg/Ha{]} & 0.165 & 0.04 & 164.902 &
+32.807 & 0.000\tabularnewline
+y \textasciitilde{} 1 & 0.000 & 0.00 & 463.583 & 331.488 &
 0.000\tabularnewline
-y \textasciitilde{} Concentration + Functional group & 0.007 & 0.85 &
-66.225 & 5.749\tabularnewline
-y \textasciitilde{} Concentration + Nesting area + Functional group &
-0.000 & 0.85 & 66.225 & 5.749\tabularnewline
-y \textasciitilde{} Concentration + Nesting area & 0.100 & 0.40 & 67.454
-& 6.978\tabularnewline
-y \textasciitilde{} Concentration{[}g/kg{]} & 0.019 & 0.27 & 132.915 &
-72.440\tabularnewline
-y \textasciitilde{} Concentration{[}Kg/Ha{]} & 0.165 & 0.04 & 164.902 &
-104.427\tabularnewline
-y \textasciitilde{} 1 & 0.000 & 0.00 & 463.583 & 403.108\tabularnewline
-y \textasciitilde{} Functional group & 0.106 & 0.06 & 464.017 &
-403.541\tabularnewline
-y \textasciitilde{} Nesting Area & 0.532 & 0.00 & 466.648 &
-406.173\tabularnewline
+y \textasciitilde{} Functional group & 0.106 & 0.06 & 464.017 & 331.922
+& 0.000\tabularnewline
+y \textasciitilde{} Nesting Area & 0.532 & 0.00 & 466.648 & 334.553 &
+0.000\tabularnewline
 \bottomrule
 \end{longtable}
 
 \section{Behaviour}\label{behaviour}
 
-\subsubsection{Behaviour and functional
-group}\label{behaviour-and-functional-group}
-
-Using functional group as a moderator yields the following results
-
-\begin{longtable}[c]{@{}rrrlrr@{}}
-\caption{effect size of the Standardized mean difference of abundance
-for each functional group and it's standard error}\tabularnewline
-\toprule
-estimate & ci.ub & ci.lb & group & p & n\tabularnewline
-\midrule
-\endfirsthead
-\toprule
-estimate & ci.ub & ci.lb & group & p & n\tabularnewline
-\midrule
-\endhead
--2.508 & 0.940 & -5.957 & Null & 0.154 & 23\tabularnewline
--5.932 & 4.630 & -16.494 & commercial & 0.271 & 3\tabularnewline
--3.763 & 9.232 & -16.759 & granular & 0.570 & 2\tabularnewline
--0.501 & 12.395 & -13.396 & not specified & 0.939 & 2\tabularnewline
--2.767 & 10.141 & -15.675 & seed treatment & 0.674 & 2\tabularnewline
--2.291 & 3.053 & -7.634 & solution & 0.401 & 12\tabularnewline
-0.456 & 13.386 & -12.474 & technical grade & 0.945 & 2\tabularnewline
-\bottomrule
-\end{longtable}
-
-the the psuedo R squared for this model was 0, that is despite the mixed
-and omnivore funtional groups being statistically significant,
-functional group on its own does not explain the variability of the
-results very well.
-
 \begin{figure}[htbp]
 \centering
-\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-20-1.pdf}
-\caption{effect size of the Standardized mean difference of behavior for
-each AI type and it's standard error}
-\end{figure}
-
-\section{Behavior and concentration
-(PPB)}\label{behavior-and-concentration-ppb}
-
-When we use concentration as parts per billion, the number of effect
-sizes diminishes from 101 to only nine.
-
-Despite that, the r squared of this model is 0.04, that is over 40
-percent of cariability explained by this factor alone. The relationship
-between concentration and Abundance can be seen in figure 4.
-
-\begin{figure}[htbp]
-\centering
-\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-22-1.pdf}
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-16-1.pdf}
 \caption{effect size of the Standardized mean difference of behavior and
 concentration (ppb)}
 \end{figure}
 
-\subsubsection{Abundance concentration and functional
-group}\label{abundance-concentration-and-functional-group-1}
-
-Again, when we have concentration, the number of studies is reduced form
-101 to nine.
-
-Adding functional group to the model increases R squared to 0.14
-
 \begin{figure}[htbp]
 \centering
-\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-24-1.pdf}
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-18-1.pdf}
 \caption{effect size of the concentration and neonic type on the
 behavior Standardized mean difference of abundance}
 \end{figure}
 
 \subsubsection{Comparison of models}\label{comparison-of-models-1}
 
-\begin{longtable}[c]{@{}lrrrr@{}}
+\begin{longtable}[c]{@{}lrrrrr@{}}
 \caption{Comparison of models taking into account p value, Pseudo R
 squared and AICc}\tabularnewline
 \toprule
-model & p\_value & R\_squared & AICc & deltaAICc\tabularnewline
+model & p\_value & R\_squared & AICc & deltaAICc & Weight\tabularnewline
 \midrule
 \endfirsthead
 \toprule
-model & p\_value & R\_squared & AICc & deltaAICc\tabularnewline
+model & p\_value & R\_squared & AICc & deltaAICc & Weight\tabularnewline
 \midrule
 \endhead
-y \textasciitilde{} Concentration & 0.136 & 0.04 & 143.381 &
-0.000\tabularnewline
+y \textasciitilde{} Concentration {[}ppb{]} & 0.136 & 0.04 & 143.381 &
+0.000 & 0.509\tabularnewline
 y \textasciitilde{} Concentration + neonic type & 0.099 & 0.14 & 143.454
-& 0.073\tabularnewline
-y \textasciitilde{} AI type & 0.981 & 0.00 & 183.581 &
-40.200\tabularnewline
+& 0.073 & 0.491\tabularnewline
+y \textasciitilde{} study type & 0.110 & 0.08 & 166.687 & 23.306 &
+0.000\tabularnewline
+y \textasciitilde{} neonic type & 0.181 & 0.04 & 167.467 & 24.086 &
+0.000\tabularnewline
+y \textasciitilde{} AI type & 0.981 & 0.00 & 183.581 & 40.200 &
+0.000\tabularnewline
+y \textasciitilde{} AI type + Functional group & 0.797 & 0.00 & 190.497
+& 47.116 & 0.000\tabularnewline
 \bottomrule
 \end{longtable}
 
-Behavior/Reproduction and neonic AI (e.g., IMI, CLO) and ppb
-
-Abundance
-
-Seed treatment only
-
-AI type and functional group
-
-Effects on:
-
-Performance measures
-
-Performance measures and functional group
-
-Functional group
-
-Performance measures and nesting area
-
-Behavior
-
-AI type and functional group
-
-Reproduction and order and functional group
-
-Abundance and order and functional group
-
-Behavior and study type
-
-Reproduction and nesting area
+\section{Reproduction}\label{reproduction}
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-26-1.pdf}
-\caption{test}
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-27-1.pdf}
+\caption{effect size of the concentration and neonic type on the
+reporoduction Standardized mean difference of abundance}
 \end{figure}
+
+\subsubsection{Comparison of models}\label{comparison-of-models-2}
+
+\begin{longtable}[c]{@{}lrrrrr@{}}
+\caption{Comparison of models taking into account p value, Pseudo R
+squared and AICc}\tabularnewline
+\toprule
+model & p\_value & R\_squared & AICc & deltaAICc & Weight\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+model & p\_value & R\_squared & AICc & deltaAICc & Weight\tabularnewline
+\midrule
+\endhead
+y \textasciitilde{} Concentration {[}ppb{]} + Neonic type & 0.000 & 0.43
+& 213.923 & 0.000 & 1\tabularnewline
+y \textasciitilde{} Concentration {[}ppb{]} & 0.194 & 0.01 & 235.285 &
+21.362 & 0\tabularnewline
+y \textasciitilde{} Order + Nesting Area & 0.940 & 0.00 & 471.357 &
+257.434 & 0\tabularnewline
+y \textasciitilde{} Order + Functional group & 0.513 & 0.08 & 476.834 &
+262.912 & 0\tabularnewline
+\bottomrule
+\end{longtable}
 
 \section*{References}\label{references}
 \addcontentsline{toc}{section}{References}
